# spectralmethod

./: README.md  environment.yml  setup.cfg
notebooks/: basic_matching.ipynb  test.ipynb
scripts/: gmm.py  spike_synthetic.py  tools.py
