[metadata]
name = calibration
version = 0.1.0
author = Xinming Dai
author_email = xdai3@columbia.edu
description = Calibration package for spike sorting and mixture modeling
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/yourusername/calibration
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = .
